--- a/test.html
+++ b/test.html
@@ -39,16 +39,16 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        <span class="fa fa-map-marker"></span>
-                        <span> Vasil Shanto, Tirane</span>
+                        <span class="fa fa-map-marker card-icon"></span>
+                        <span>Vasil Shanto, Tirane</span>
                     </li>
                     <li class="list-group-item">
-                        <span class="fa fa-home"></span>
-                        <span> 2+1</span>
+                        <span class="fa fa-home card-icon"></span>
+                        <span>2+1</span>
                     </li>
                     <li class="list-group-item">
-                        <span class="fa fa-square"></span>
-                        <span> 168m<sup>2</sup></span>
+                        <span class="fa fa-th-large card-icon"></span>
+                        <span>168m<sup>2</sup></span>
                     </li>
                 </ul>
             </div>
@@ -69,16 +69,16 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        <span class="fa fa-map-marker"></span>
-                        <span> Vasil Shanto, Tirane</span>
+                        <span class="fa fa-map-marker card-icon"></span>
+                        <span>Vasil Shanto, Tirane</span>
                     </li>
                     <li class="list-group-item">
-                        <span class="fa fa-home"></span>
-                        <span> 2+1</span>
+                        <span class="fa fa-home card-icon"></span>
+                        <span>2+1</span>
                     </li>
                     <li class="list-group-item">
-                        <span class="fa fa-square"></span>
-                        <span> 168m<sup>2</sup></span>
+                        <span class="fa fa-th-large card-icon"></span>
+                        <span>168m<sup>2</sup></span>
                     </li>
                 </ul>
             </div>
@@ -99,16 +99,16 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        <span class="fa fa-map-marker"></span>
-                        <span> Vasil Shanto, Tirane</span>
+                        <span class="fa fa-map-marker card-icon"></span>
+                        <span>Vasil Shanto, Tirane</span>
                     </li>
                     <li class="list-group-item">
-                        <span class="fa fa-home"></span>
-                        <span> 2+1</span>
+                        <span class="fa fa-home card-icon"></span>
+                        <span>2+1</span>
                     </li>
                     <li class="list-group-item">
-                        <span class="fa fa-square"></span>
-                        <span> 168m<sup>2</sup></span>
+                        <span class="fa fa-th-large card-icon"></span>
+                        <span>168m<sup>2</sup></span>
                     </li>
                 </ul>
             </div>
